--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 	<div class="container w-75">
 		<div class="py-5 text-center">
 			<h1>Tasks</h1>
-			<p class="lead">A very simple task management tool</p>
+			<p class="lead">A very simple task management tool created using spring</p>
 		</div>
 		<p class="alert alert-success" role="alert" th:if="${sucess != null}" th:text="${sucess}" id="message" />
 		<div th:switch="${todos.size()}">
